--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -44,7 +45,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 
-
     // Coroutine dependency
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10"
@@ -54,6 +54,7 @@ dependencies {
 
     //Circular image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     //Retrofit dependencies
     def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -62,7 +63,6 @@ dependencies {
     //Lifecycle Component && ViewModel
     def lifecycle_version = "2.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     // alternately - if using Java8, use the following instead of lifecycle-compiler
