--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -71,8 +72,13 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
-    // Paging source
-    def paging_version = "3.0.0-beta03"
-    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    //paging3
+    implementation "androidx.paging:paging-runtime:3.0.0-alpha03"
+
+    // Dagger Hilt
+    def hilt_version = '2.33-beta'
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
 
 }
